# forensicteamA

./: LICENSE  README.md
Data-Extractor/: org.extractor.Builder.json
Data-Extractor/data/: meson.build  org.extractor.Builder.appdata.xml.in  org.extractor.Builder.desktop.in  org.extractor.Builder.gschema.xml
Data-Extractor/po/: meson.build
Data-Extractor/src/: data_extractor-window.c  data_extractor-window.h  data_extractor-window.ui  data_extractor.gresource.xml  main.c  meson.build
